# mediumlm

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-14-mediumlm-implementation.md  2026-07-20-batch-fetch.md  2026-07-22-article-cache.md
docs/superpowers/specs/: 2026-07-14-mediumlm-design.md  2026-07-22-article-cache-vault-corpus-design.md
src/mediumlm/: browser.py  cache.py  cli.py  cookies.py  fetch.py  parsing.py  search.py  urls.py
tests/: test_browser.py  test_cache.py  test_cli.py  test_cookies.py  test_fetch.py  test_parsing.py  test_search.py  test_urls.py
tests/fixtures/: blocked_cloudflare.html  full_article.html  not_member_preview.html  search_error_page.html  search_results.html  signed_out_preview.html
